--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "immer": "^7.0.9",
+    "json-server": "^0.16.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
@@ -28,11 +29,13 @@
     "reselect": "^4.0.0",
     "typescript": "~3.7.2"
   },
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json-server": "json-server --watch public/db.json --port 3001"
   },
   "eslintConfig": {
     "extends": "react-app"
